complete pom.xml config.